--- a/MyApplications/.gitignore
+++ b/MyApplications/.gitignore
@@ -1,1 +1,7 @@
 /AccountingApp.class
+/AccountingAppIFUnder10000.class
+/AccountingAppIF.class
+/AccountingArrayApp.class
+/AccountingArrayLoopApp.class
+/AccountingMethodApp.class
+/AccountingClassApp.class
