--- a/MyApplications/.gitignore
+++ b/MyApplications/.gitignore
@@ -5,3 +5,5 @@
 /AccountingArrayLoopApp.class
 /AccountingMethodApp.class
 /AccountingClassApp.class
+/Accounting$AccountingClassApp.class
+/Accounting.class
